--- a/gb/17/11/4/n9805292.md
+++ b/gb/17/11/4/n9805292.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/bmokpd3786/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bmokpd3786/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/bmokpd3786/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/bmokpd3786/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/bmokpd3786/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bmokpd3786/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/bmokpd3786/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/bmokpd3786/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/bmokpd3786/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/bmokpd3786/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/bmokpd3786/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/bmokpd3786/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/bmokpd3786/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/bmokpd3786/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/bmokpd3786/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/bmokpd3786/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/bmokpd3786/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/bmokpd3786/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/bmokpd3786/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/bmokpd3786/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/bmokpd3786/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/bmokpd3786/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/bmokpd3786/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/bmokpd3786/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>输赢以外，一颗球打破传统教育框架，踢出孩子创造力</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/11/Youth-soccer-indiana-1-600x400.jpg" />
 <h6>足球非常“好玩”，而且没有性别或年龄的限制。（维基百科公共领域）
 </h6>
 <hr>
 <p><strong>自序</strong></p>
-<p><ahref="https://github.com/bmokpd3786/djy/blob/master/gb/tag/%E9%99%88%E4%BF%A1%E5%AE%89.md#1">陈信安</a></p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%99%88%E4%BF%A1%E5%AE%89.md#1">陈信安</a></p>
 <p>一个转弯，车子就开进了靠近水门的下坡甬道，透过车窗映入眼帘的是开阔的风景，连绵的山脉和高低起伏的建筑物都在水岸的对面，市区的喧嚣仿佛都被隔离开来。我打开车窗，湿润而稍有凉意的微风吹拂进来，刚下过雨的午后，空气里弥漫着泥土和草地的气味；我把车子停在一大片的草坪旁边，背起用具走向绿意：这里是大佳河滨公园的足球场，也几乎是我每天都会报到的地方。</p>
-<p>我是<ahref="https://github.com/bmokpd3786/djy/blob/master/gb/tag/%E9%99%88%E4%BF%A1%E5%AE%89.md#1">陈信安</a>，是个足球球员，也是足球教练。到目前为止，我的生命都和足球脱离不了关系：因为足球，我从普通的乡下囝仔，变成国家代表队的选手和总教练；因为足球，让我踏遍了世界各地的运动赛场；因为足球，我结交了许许多多意想不到的朋友；因为足球，让我体验到各式各样的人生经历和视野。有人问我，如果我不曾和足球相遇，现在会过着什么样的生活？其实我没有答案，也想不出来其他可能；但我唯一肯定的是，足球不仅是我最大的乐趣所在，也是我的人生志业和理想的实践方式——而这一切，都从那份最原始的喜欢开始。</p>
+<p>我是<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%99%88%E4%BF%A1%E5%AE%89.md#1">陈信安</a>，是个足球球员，也是足球教练。到目前为止，我的生命都和足球脱离不了关系：因为足球，我从普通的乡下囝仔，变成国家代表队的选手和总教练；因为足球，让我踏遍了世界各地的运动赛场；因为足球，我结交了许许多多意想不到的朋友；因为足球，让我体验到各式各样的人生经历和视野。有人问我，如果我不曾和足球相遇，现在会过着什么样的生活？其实我没有答案，也想不出来其他可能；但我唯一肯定的是，足球不仅是我最大的乐趣所在，也是我的人生志业和理想的实践方式——而这一切，都从那份最原始的喜欢开始。</p>
 <p>虽然具有国际足球职业教练的资格，也累积了许多年的教练实战经验，但我也是近些年退役之后，才开始接触儿童的足球训练。在其他足球产业相对成熟的国家，足球学校是职业足球员起步的初级机构，提供十八岁以下的儿童和青少年球员接受系统性的训练，而职业足球俱乐部也都与这些学校保持密切关系。职业球探会长期观察足球学校的学生，选择优秀的球员进入俱乐部，接受更深入的职业足球训练。</p>
 <p>目前在台湾，职业足球的环境尚未成熟，但我们都知道教育是一个产业发展的根基所在，对我来说，现阶段最主要的目标就是建构好的本土足球学校，撒下足球的种子，让更多的孩子接触进而喜欢足球，然后把这样的风气带到家庭、学校和社会，使足球成为一种普遍的生活乐趣。</p>
 <h2><span style="color: #008000;">训练的黄金年龄</span></h2>
@@ -32,56 +32,55 @@
 <h2><span style="color: #008000;">密集有效率的移地训练</span></h2>
 <p>许多球队都会举办“移地训练”，而对于小球员来说，这样的活动也有助于程度的提升。以陈信安足球学校来说，这样的活动大都在小朋友放寒暑假时举办，比较不影响学校课业。移地训练的内容，顾名思义就是换个训练的所在，通常我们会依据经费来决定地点，目前多为亚洲的邻近国家。当然，预算足够的话，也可以选择到欧美等地。移地训练实施的方式是将球员集中，在这段时间里以团体的方式生活和学习：有些校队运动员平时就集中在宿舍住宿，但在俱乐部踢球的孩子，彼此相处的时间仅限于日常练习的那几个小时，移地训练则会因为大家集体行动，吃住和踢球都在一起，进而彼此更加熟悉，也增加默契。</p>
 <p>此外，在移地训练中，我们也会安排球员和国外的球队比赛，以球会友，接触国际也增加经验。通常移地训练之后，球员的普遍技术水准都会有所提升；而且不同地方的文化交流，也在自然而然中累积。像是今年（二○一七）夏天，陈信安足球学校就预计在泰国和日本进行移地训练——之前我们曾经去过日本，而泰国则是第一次，或许两者之间的硬体或软体有些差异，但可以期待的是必定会有一番不同的体验。@（未完，待续）</p>
-<p>──节录自《<ahref="https://github.com/bmokpd3786/djy/blob/master/gb/tag/%E8%B6%B3%E7%90%83%E5%AE%B6%E5%BA%AD%E6%8C%87%E5%8D%97.md#1">足球家庭指南</a>》／ <ahref="https://github.com/bmokpd3786/djy/blob/master/gb/tag/%E7%BD%91%E8%B7%AF%E4%B8%8E%E4%B9%A6%E5%87%BA%E7%89%88.md#1">网路与书出版</a></p>
-<p>（点阅<em>【<ahref="https://github.com/bmokpd3786/djy/blob/master/gb/tag/%E8%B6%B3%E7%90%83%E5%AE%B6%E5%BA%AD%E6%8C%87%E5%8D%97.md#1"><span style="color: #0000ff;"><ahref="https://github.com/bmokpd3786/djy/blob/master/gb/tag/%E8%B6%B3%E7%90%83%E5%AE%B6%E5%BA%AD%E6%8C%87%E5%8D%97.md#1">足球家庭指南</a></span></a>】</em>系列文章。）</p>
+<p>──节录自《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B6%B3%E7%90%83%E5%AE%B6%E5%BA%AD%E6%8C%87%E5%8D%97.md#1">足球家庭指南</a>》／ <ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BD%91%E8%B7%AF%E4%B8%8E%E4%B9%A6%E5%87%BA%E7%89%88.md#1">网路与书出版</a></p>
+<p>（点阅<em>【<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B6%B3%E7%90%83%E5%AE%B6%E5%BA%AD%E6%8C%87%E5%8D%97.md#1"><span style="color: #0000ff;"><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B6%B3%E7%90%83%E5%AE%B6%E5%BA%AD%E6%8C%87%E5%8D%97.md#1">足球家庭指南</a></span></a>】</em>系列文章。）</p>
 <p>责任编辑：李梅</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/17/8/28/n9572558.md#1">当妈妈不必完美．不一样的德式教养练习（七）</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/17/9/7/n9607648.md#1">纪实文学：青苔不会消失（1）</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/17/9/11/n9619650.md#1">小说：山茶花文具店（1）</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/17/10/2/n9689260.md#1">记者不是你想的那样：萧彤雯的新闻现场（一）</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/17/10/2/n9689305.md#1">记者不是你想的那样：萧彤雯的新闻现场（二）</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/17/10/6/n9706023.md#1">时晴时阴（一）</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/17/10/7/n9710055.md#1">穷人不清，他不能平静（一）</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/17/10/25/n9768429.md#1">淬炼：世界冠军吴则霖的咖啡人生（三）</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/17/11/3/n9801571.md#1">故事的秘密：写在剧本之前的关键练习(1)</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/17/11/3/n9801642.md#1">故事的秘密：写在剧本之前的关键练习(2)</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/8/28/n9572558.md#1">当妈妈不必完美．不一样的德式教养练习（七）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/9/7/n9607648.md#1">纪实文学：青苔不会消失（1）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/9/11/n9619650.md#1">小说：山茶花文具店（1）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/10/2/n9689260.md#1">记者不是你想的那样：萧彤雯的新闻现场（一）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/10/2/n9689305.md#1">记者不是你想的那样：萧彤雯的新闻现场（二）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/10/6/n9706023.md#1">时晴时阴（一）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/10/7/n9710055.md#1">穷人不清，他不能平静（一）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/10/25/n9768429.md#1">淬炼：世界冠军吴则霖的咖啡人生（三）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/11/3/n9801571.md#1">故事的秘密：写在剧本之前的关键练习(1)</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/11/3/n9801642.md#1">故事的秘密：写在剧本之前的关键练习(2)</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/6/n10195043.md#1" target="_blank">袁斌：中共“苏维埃共和国”的专制实验</a></li><li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/23/n11741117.md#1" target="_blank">中共侵犯宗教自由 美国宣布将持续追责</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/10/n11712979.md#1" target="_blank">严晓：田汉之死? ? ?</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/9/14/n8301021.md#1" target="_blank">周向阳案辩词：为捍卫法律正义与真善忍而辩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/27/n12215574.md#1">《地母经》预言的2020年中国水灾和后果</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/5/n12163931.md#1">【命理】48岁才起运的大器晚成之命</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/12/1/21/n3492348.md#1">令人感动千年    范仲淹</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/5/15/n12112533.md#1">违背原著的宝玉娶亲</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/5/23/n12131792.md#1">【康熙大帝】少年天子不动声色 智除鳌拜</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/7/1/n12225208.md#1">【纪元播报】川普签总统令 暂停发放H-1B等工作签证</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/7/1/n12224924.md#1">【重播】蓬佩奥新闻发布会：香港新法太离谱</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/30/n12223128.md#1">【重播】美国会有关“港版国安法”听证会</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/30/n12220995.md#1">中共威胁将限制美国人签证 蓬佩奥回击</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/30/n12221534.md#1">郝海东支持民众抗共 “共产党 你们完了”</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/23/n12207542.md#1">【独家】前微博审核员勇揭中共审查黑幕</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/29/n12220609.md#1">为救汪小菲事业八折卖豪宅？大S经纪人回应</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/30/n12222874.md#1">中共通过港版国安法 何韵诗脸书发文诉心声</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/29/n12219022.md#1">传黄秋生拍宣传片喊价228万？北市观传局回应</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/29/n12220251.md#1">汪峰49岁生日 章子怡携女儿跳萤光舞送祝福</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/29/n12220365.md#1">与黄秋生合演新片香港开红盘 林嘉欣发表感言</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/30/n12221187.md#1">泡香菇的水别扔！有2大好处</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/30/n12221688.md#1">中制无人机在阿尔及利亚坠毁 已经第三次</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/29/n12218239.md#1">鸡蛋可以保存多久？一杯水测鸡蛋新不新鲜</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/7/1/n12223626.md#1">中俄棕熊在边境展开大战 为了争夺领土吗？</a></li>
-<li><a href="https://github.com/bmokpd3786/djy/blob/master/gb/20/6/29/n12219023.md#1">北京冰雹状似中共病毒 这是末日预兆？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616638.md#1">【十字路口】蓬佩奥到访台湾意义重大？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613932.md#1">【健康1+1】染Omicron出现脑雾 一方法2周解除</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/bmokpd3786/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/bmokpd3786/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/11/4/n9805292.htm">输赢以外，一颗球打破传统教育框架，踢出孩子创造力</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/11/4/n9805292.htm">输赢以外，一颗球打破传统教育框架，踢出孩子创造力</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/bmokpd3786/djy/blob/master/gb/17/11/4/n9805292.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/bmokpd3786/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/bmokpd3786/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/bmokpd3786/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/bmokpd3786/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bmokpd3786/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/17/11/4/n9805292.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
